--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			];
 			for (i = 0; i < images.length; i++) {
 				console.log(images[i] + " " + imgDimensions[i][0] + "," + imgDimensions[i][1]);
+				//automatically fill div/gallery with figures
 				//document.getElementById("gallery").innerHTML += 
 				//	"<figure itemprop='associatedMedia' itemscope itemtype='http://schema.org/ImageObject'>" 
 				//	+ "<a href='/images/" + images[i] + ".jpg' data-caption='' data-width='" + imgDimensions[i][0] +"' data-height='" + imgDimensions[i][1] 
@@ -87,6 +88,76 @@
 		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
             <a href="/images/cliff2.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="4032" data-height="3024" itemprop="contentUrl">
               <img src="/images/cliff2.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/flower.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="2484" data-height="2432" itemprop="contentUrl">
+              <img src="/images/flower.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/flower2.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="2325" data-height="3955" itemprop="contentUrl">
+              <img src="/images/flower2.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/flower3.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="2736" data-height="2764" itemprop="contentUrl">
+              <img src="/images/flower3.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/flower4.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="2048" data-height="1627" itemprop="contentUrl">
+              <img src="/images/flower4.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/insect.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1618" data-height="1078" itemprop="contentUrl">
+              <img src="/images/insect.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/lillies.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1928" data-height="3520" itemprop="contentUrl">
+              <img src="/images/lillies.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/lillies2.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="2572" data-height="2678" itemprop="contentUrl">
+              <img src="/images/lillies2.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/man.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="3024" data-height="4032" itemprop="contentUrl">
+              <img src="/images/man.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/mountain.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="747" data-height="341" itemprop="contentUrl">
+              <img src="/images/mountain.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/mountain2.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1600" data-height="1604" itemprop="contentUrl">
+              <img src="/images/mountain2.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/petals.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1954" data-height="3848" itemprop="contentUrl">
+              <img src="/images/petals.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/plum.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1078" data-height="2012" itemprop="contentUrl">
+              <img src="/images/plum.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/town.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="4032" data-height="2132" itemprop="contentUrl">
+              <img src="/images/town.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/water.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="2048" data-height="2040" itemprop="contentUrl">
+              <img src="/images/water.jpg" itemprop="thumbnail" alt="Image description">
             </a>
           </figure>
         </div>
