--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 			var images = ["bamboo", "bamboo2", "bouquet", "branch", "cliff", "cliff2",
 				      "flower", "flower2", "flower3", "flower4", "insect", "lillies",
 				      "lillies2", "man", "mountain", "mountain2", "petals", "plum", 
-				      "town", "water"];
+				      "poem", "town", "water"];
 			var imgDimensions = [
 				[1600, 3390], [1078, 1618], [1913, 3893], [2027, 2046], [1698, 3569], [4032, 3024],
 				[2484, 2432], [2325, 3955], [2736, 2764], [2048, 1627], [1618, 1078], [1928, 3520],
 				[2572, 2678], [3024, 4032], [747, 341], [1600, 1604], [1954, 3848], [1078, 2012],
-				[4032, 2132], [2048, 2040]
+				[638, 960], [4032, 2132], [2048, 2040]
 			];
 			for (i = 0; i < images.length; i++) {
 				console.log(images[i] + " " + imgDimensions[i][0] + "," + imgDimensions[i][1]);
@@ -148,6 +148,11 @@
 		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
             <a href="/images/plum.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="1078" data-height="2012" itemprop="contentUrl">
               <img src="/images/plum.jpg" itemprop="thumbnail" alt="Image description">
+            </a>
+          </figure>
+		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="/images/poem.jpg" data-caption="Painting<br><em class='text-muted'>by Ellen He</em>" data-width="638" data-height="960" itemprop="contentUrl">
+              <img src="/images/poem.jpg" itemprop="thumbnail" alt="Image description">
             </a>
           </figure>
 		  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
